tests/negative/neg_pr118c_mixed_logical_operators.safe
package neg_pr118c_mixed_logical_operators
   value : boolean = true and false or true;
